<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caecus.asistente.LoginActivity">

    <LinearLayout
        android:id="@+id/area_logo"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <ImageView
            android:layout_width="211dp"
            android:src="@drawable/logo"
            android:layout_height="111dp"
            android:layout_weight="1.15" />
    </LinearLayout>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:onClick="irNuevaCuenta"
        android:id="@+id/btnNuevaCuenta"
        android:drawableLeft="@drawable/ic_person_add_white_24dp"
        android:drawablePadding="8dp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:weightSum="1"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/area_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_person_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp">

                <EditText
                    android:id="@+id/txtuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gonzalomorales93@gmail.com"
                    android:maxLength="128"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_contraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_lock_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp">

                <EditText
                    android:id="@+id/txtpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1234"
                    android:maxLength="32"
                    android:ems="10"
                    android:hint="Contraseña"
                    android:singleLine="true"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="0.1"
            android:id="@+id/linearLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrar"
                android:id="@+id/btnEntrar"
                android:onClick="Login"
                android:drawableLeft="@drawable/ic_send_white_24dp"
                android:drawablePadding="8dp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
